--- a/components/layout.module.css
+++ b/components/layout.module.css
@@ -20,6 +20,14 @@
   height: 8rem;
 }
 
+.headerHomeTitle {
+  font-size: 2.5rem;
+  line-height: 1.2;
+  font-weight: 800;
+  letter-spacing: -0.05rem;
+  margin: 1rem 0 0;
+}
+
 .backToHome {
   margin: 3rem 0 0;
 }
